# OpenWeaponMountComputerFirmware

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3  sdkconfig.old
.agents/skills/c-style/: SKILL.md
.agents/skills/development-plan/: SKILL.md
.agents/skills/esp32-debug/: SKILL.md
.agents/skills/lvgl-layout/: SKILL.md
.agents/skills/lvgl-widget/: SKILL.md
components/bno08x/: CMakeLists.txt
components/bno08x/include/: bno085.h
components/bno08x/src/: bno085.c  bno085_i2c.c  (+6 more)
components/esp_lcd_touch_ft3168/: CMakeLists.txt  esp_lcd_touch_ft3168.c  esp_lcd_touch_ft3168.h
components/esp_pmic_axp2101/: CMakeLists.txt
main/: CMakeLists.txt  about_config.c  about_config.h  acceleration_analysis_view.c  acceleration_analysis_view.h  app.c  app_cfg.h  bsp.c  bsp.h  buzzer.c  buzzer.h  circular_buffer.c  circular_buffer.h  common.c  common.h  config_view.c  config_view.h  countdown_timer.c  countdown_timer.h  countdown_timer_config_view.c  countdown_timer_config_view.h  dev_kit_app_cfg.h  digital_level_view.c  digital_level_view.h  digital_level_view_controller.c  digital_level_view_controller.h  digital_level_view_type_1.c  digital_level_view_type_1.h  digital_level_view_type_2.c  digital_level_view_type_2.h  dope_config_view.c  dope_config_view.h  idf_component.yml  low_power_mode.c  low_power_mode.h  lvgl_display.c  lvgl_display.h  main_tileview.c  main_tileview.h  mem_diag.c  (+31 more)
references/: bug_list.md  display-refresh-rate-rca.md
scripts/: ota_host.py
(+11 files in other folders)
